# simple-words-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
data/: Shopping_001.yaml  travel_locative_001.yaml
deploy/: build  deploy  deployment.yaml  push
migrations/: 20240107174249_initial.sql
proto/: bot_data.proto
src/: bot.rs  main.rs  model.rs  test_db.rs  utils.rs
src/bot/: ask_next_task_handler.rs  bot_core.rs  bot_filter.rs  bot_services.rs  bot_services_in_mem.rs  filter_handlers.rs  mod.rs
src/service/: mod.rs  task_info_service.rs  user_state.rs
