[package]
name = "simple-words-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
thiserror = "1.0.30"
peg = "0.8.2"
rand = "0.8.4"
map-macro = "0.2.2"
indoc = "2.0.4"
teloxide = "0.12.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.29"
pretty_env_logger = "0.5.0"
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4.14"
strum = { version = "0.25", features = ["derive"] }
dotenv = "0.15.0"
bytes = "1.1.0"
prost = "0.12.3"
base64 = "0.21.5"

[build-dependencies]
prost-build = "0.12.3"

